# data-analytics-project-100

./: .env  .gitignore  README.md  ads.json  conversion.json  main.py  main.py.py  my-project-3.ipynb  my-project-3.py  out.json  pyproject.toml
.ipynb_checkpoints/: check-checkpoint.ipynb
charts_project/: main.py  pyproject.toml
hexlet-code/: .env  main.py  my-project-3.py  pyproject.toml
